package logica;

public class Bicicleta extends Vehiculo {
    public void conducir(){
        System.out.println("pedalenado la bicicleta...");
    }
    public void sonido(){
        System.out.println("ring ring....");
    }
}
