package logica;
import java.util.Scanner;
public class Scaner {
    Scanner in = new Scanner(System.in);
}

