package logica;

public interface Sonido {
    public void sonido();
}
