package logica;

public abstract class Vehiculo implements Sonido, Conducir {
    public void conducir() {
    }
    public void sonido() {
    }

}
