@startuml Vehiculo
package logica {
    interface Conducir
    interface Sonido
    class Bicicleta
    class Carro
    class Triciclo
    class Scaner
    class Conductor
    class Vehiculo
    class Main
    Conducir : conducir()
    Sonido : sonido()
    Bicicleta : conducir()
    Bicicleta : sonido() 
    Carro : conducir()
    Carro : sonido() 
    Triciclo : conducir()
    Triciclo : sonido() 
    Scaner : Scanner in
    Conductor : int edad
    Conductor : String nombre
    Conductor : obtNom()
    Conductor : obtEdad()
    Main : main()
}
Main -- Conductor
Vehiculo ..|> Sonido
Vehiculo ..|> Conducir
Bicicleta --|> Vehiculo
Carro --|> Vehiculo
Triciclo --|> Vehiculo
Conductor -- Vehiculo
Scaner -- Conductor

@enduml